--- a/src/control-panel/ControlPanel.css
+++ b/src/control-panel/ControlPanel.css
@@ -1,6 +1,6 @@
 #control-panel {
     background-color: #fff;
-    height: 40px;
+    height: 60px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -42,6 +42,10 @@
 
 .format-action__button--active {
     border: 1.5px solid #ffa500;
+}
+
+.format-action__select {
+    margin: 5px 0;
 }
 
 
